Trying to fix meme overflow on mobile

--- a/jokes/jokes.css
+++ b/jokes/jokes.css
@@ -21,6 +21,7 @@ body{
 }
 #meme-container img{
     height: 50vh;
+    max-width: 100vw;
     border-radius: 10px;
 }
 
